--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header (searchChange)="searchChange($event)"></app-header>
 
 <div class="container">
     <h2 class="products__title">Productos Mercado Libre</h2>
