--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,11 @@ input{
   cursor: pointer;
   transition: all .2s;
   color: black;
+
+  a{
+    color: black;
+    text-decoration: none;
+  }
 }
 
 .btn:hover{
